--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                 title="Krótka wiadomość tekstowa w telefonie">SMS</abbr>.</label>
             <br>
             <label><input type="radio" name="confirmation" value="Wycofana"> Wycofuję udzieloną zgodę na otrzymywanie
-              powiadomień <abbr title="Krótka wiadomość tekstowa w telefonie">SMS</abbr>
-              <span lang="en-gb">Child
-                Alert</span>.</label>
+              powiadomień <abbr title="Krótka wiadomość tekstowa w telefonie">SMS</abbr>.</label>
           </div>
           <div class="error" id="confirmationError"></div>
         </div>
